# libclipboard-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust-clippy.yml
examples/: clipboard_has_changed.rs  enumerate_formats.rs  number_of_formats.rs  set_clipboard_text.rs
src/: lib.rs  macos.rs  models.rs  windows.rs
tests/: integration_test.rs
