[package]
name = "libclipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", features = ["jpeg", "png", "tiff"] }
pdf = "0.7.0"

# macOS:
[target.'cfg(target_os = "macos")'.dependencies]
rust-macios = "0.3.0"
