[package]
name = "libclipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24", features = ["jpeg", "png", "tiff"] }
pdf = "0.7.0"
cfg-if = "1.0.0"

# macOS:
[target.'cfg(target_os = "macos")'.dependencies]
rust-macios = "0.4.0"

# Windows:
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
] }
