[package]
name = "libclipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

# macOS:
[target.'cfg(target_os = "macos")'.dependencies]
icrate = { git = "https://github.com/madsmtm/objc2", features = [
    "AppKit",
    "AppKit_NSPasteboard",
    "Foundation",
    "Foundation_NSData",
    "Foundation_NSMutableArray",
] }

# Windows:
[target.'cfg(target_os = "windows")'.dependencies]
uuid = { version = "1.3.3", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_UI_WindowsAndMessaging",
] }
